--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
     </head>
     <body>
-        <iframe src="https://drive.google.com/file/d/173PGj3C7-4HHnEOPdjhWjuw_INaPHnNh/preview" width="100%" height="100%" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1F7Cb8UsLswnVNSv8Qs7WDERwEtPYYEUZ/view?usp=sharing" width="100%" height="100%" allow="autoplay"></iframe>
     </body>
 </html>
