--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
     </head>
     <body>
-        <iframe src="https://drive.google.com/file/d/16SQxRpzluf7XvDPP1ZBevGa4IiIMcDLl/preview" width="640" height="480" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/16SQxRpzluf7XvDPP1ZBevGa4IiIMcDLl/preview" width="100%" height="100%" allow="autoplay"></iframe>
     </body>
 </html>
