--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
 
     </head>
-    <body>
-        <iframe src="https://drive.google.com/file/d/1GJeRWztK1JSlspC6CSL8k5xRwPNWpOGy/preview" width="100vw" height="100vh" allow="autoplay"></iframe>
+    <body style="height:100%;width:100%">
+        <iframe src="https://drive.google.com/file/d/1GJeRWztK1JSlspC6CSL8k5xRwPNWpOGy" width="100%" height="100%" allow="autoplay"></iframe>
     </body>
 </html>
